@@ -383,6 +383,33 @@ CODE:
 }
 
 int
+xs_status ()
+CODE:
+{
+    dMY_CXT;
+	if (MY_CXT.queue_id < 0) {
+		ST(0) = sv_2mortal(newSVnv(0));
+		XSRETURN(1);
+	}
+	snd_seq_queue_status_t *queue_status;
+	int running, events;
+	const snd_seq_real_time_t *current_time;
+	snd_seq_queue_status_malloc( &queue_status );
+	snd_seq_get_queue_status(MY_CXT.seq_handle, MY_CXT.queue_id, queue_status);
+	current_time = snd_seq_queue_status_get_real_time( queue_status );
+	running      = snd_seq_queue_status_get_status( queue_status );
+	events       = snd_seq_queue_status_get_events( queue_status );
+	snd_seq_queue_status_free( queue_status );
+	double sec   = current_time->tv_sec;
+	double nsec  = current_time->tv_nsec;
+	/* returns: running, time, events */
+    ST(0) = sv_2mortal(newSVnv(running));
+    ST(1) = sv_2mortal(newSVnv(sec + 1.0e-9*nsec));
+    ST(2) = sv_2mortal(newSVnv(events));
+    XSRETURN(3);
+}
+
+int
 xs_stop ()
 CODE:
 {
