@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec-current.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         MIDI-ALSA
-version:      1.04
+version:      1.05
 version_from: ALSA.pm
 installdirs:  site
 license:      perl
